Bug 1452825, use smooth scrolling also for history navigations, r=bz